# osac-addon-lint

./: README.md  pyproject.toml
src/osac_addon_lint/: __init__.py  cli.py  linter.py
tests/: test_linter.py
