[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osac-addon-lint"
version = "0.1.0"
description = "OSAC Add-On collection linter — validates Ansible collections against the OSAC Add-On convention"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "OSAC Project" },
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.scripts]
osac-addon-lint = "osac_addon_lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/osac_addon_lint"]
